--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <link rel="icon" href="/spotify.png" />
@@ -10,16 +10,17 @@
     />
     <title>Spotify - Prof. Cohen</title>
     <style>
-      html, body {
-          height: 100%;
-          margin: 0;
-          padding: 0;
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
       }
 
       #root {
-          height: 100%;
+        height: 100%;
       }
-  </style>
+    </style>
   </head>
   <body>
     <div id="root"></div>
